Fix loading z-index

--- a/packages/formoj/scss/components/_loading.scss
+++ b/packages/formoj/scss/components/_loading.scss
@@ -9,5 +9,7 @@
   align-items: center;
   justify-content: center;
 
+  z-index: 3;
+
   background: $formoj-loading-bg;
 }
